# azure-fastapi-postgres-flexible-aca

./: .cruft.json  .env.example  .gitignore  README.md  azure.yaml  docker-compose.yml  pyproject.toml  requirements-dev.in  requirements-dev.txt
.devcontainer/: Dockerfile_dev  devcontainer.json  docker-compose_dev.yml
.github/workflows/: azure-dev.yaml  azure-dev.yml  playwright.yaml  test.yml  tests.yaml  tests.yml
demo-code/: app.py  database.db  entrypoint.sh  models.py  requirements.in  requirements.txt
demo-code/templates/: base.html  cruise_detail.html  destination_detail.html  info_request_create.html
demo_code/: Dockerfile  app.py  entrypoint.sh  gunicorn.conf.py  models.py  pyproject.toml  requirements.in  requirements.txt  seed_data.py
demo_code/fastapi_app/: __init__.py  app.py  models.py  seed_data.py
demo_code/flaskapp/: __init__.py  models.py  pages.py  relecloud.py  seeder.py
demo_code/flaskapp/config/: development.py  production.py
demo_code/flaskapp/migrations/versions/: 7e0fa0af05a6_.py
demo_code/templates/: base.html  cruise_detail.html  destination_detail.html  destinations.html  info_request_create.html
demo_code/tests/: conftest.py  test_playwright.py
infra/: main.bicep  main.parameters.json  main.test.bicep  web.bicep
src/: entrypoint.sh  pyproject.toml  requirements.txt
src/fastapi_app/: __init__.py  app.py  models.py  seed_data.py
src/templates/: base.html  cruise_detail.html  destination_detail.html  destinations.html
src/tests/: conftest.py
src/tests/local/: conftest.py  test_gunicorn.py
